# pxq_ticket

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  upload_to_telegram.py  vite.config.ts
.github/workflows/: release.yml  upload.yml
src/: App.vue  main.ts  router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pxq/: client.rs  error.rs  mod.rs  order.rs  show.rs  user.rs
src/constant/: event.ts
src/store/: index.ts
src/views/: Home.vue  Login.vue  Order.vue  Show.vue  Task.vue
src/window/: actions.ts  index.ts
